// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Accordion component only opens the last section when multiple sections have been clicked 1`] = `
<ul
  className="Accordion"
>
  <li
    className="AccordionItem"
    key="0"
  >
    <button
      onClick={[Function]}
    >
      Section 1
    </button>
  </li>
  <li
    className="AccordionItem"
    key="1"
  >
    <button
      onClick={[Function]}
    >
      Section 2
    </button>
  </li>
  <li
    className="AccordionItem"
    key="2"
  >
    <button
      onClick={[Function]}
    >
      Section 3
    </button>
    <p>
      Animi amet cumque sint cupiditate officia ab voluptatibus libero optio et?
    </p>
  </li>
</ul>
`;

exports[`Accordion component opens a clicked section 1`] = `
<ul
  className="Accordion"
>
  <li
    className="AccordionItem"
    key="0"
  >
    <button
      onClick={[Function]}
    >
      Section 1
    </button>
    <p>
      Lorem ipsum dolor sit amet consectetur adipisicing elit.
    </p>
  </li>
  <li
    className="AccordionItem"
    key="1"
  >
    <button
      onClick={[Function]}
    >
      Section 2
    </button>
  </li>
  <li
    className="AccordionItem"
    key="2"
  >
    <button
      onClick={[Function]}
    >
      Section 3
    </button>
  </li>
</ul>
`;

exports[`Accordion component renders empty <ul> when given no sections 1`] = `
<ul
  className="Accordion"
/>
`;

exports[`Accordion component renders no sections as active by default 1`] = `
<ul
  className="Accordion"
>
  <li
    className="AccordionItem"
    key="0"
  >
    <button
      onClick={[Function]}
    >
      Section 1
    </button>
  </li>
  <li
    className="AccordionItem"
    key="1"
  >
    <button
      onClick={[Function]}
    >
      Section 2
    </button>
  </li>
  <li
    className="AccordionItem"
    key="2"
  >
    <button
      onClick={[Function]}
    >
      Section 3
    </button>
  </li>
</ul>
`;
